adição das migrações de banco de dados

--- a/src/CleanArchitecture.WebUI/appsettings.json
+++ b/src/CleanArchitecture.WebUI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Initial Catalog=CleanArcDB;MultipleActiveResultSets=True;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
