--- a/src/CleanArchitecture.Application/CleanArchitecture.Application.csproj
+++ b/src/CleanArchitecture.Application/CleanArchitecture.Application.csproj
@@ -2,10 +2,15 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArchitecture.Domain\CleanArchitecture.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Products\Handlers\" />
   </ItemGroup>
 
   <PropertyGroup>
